# autobuild4

./: .gitattributes  .gitignore  CMakeLists.txt  GenerateConfig.cmake  README.md  ab4.sh  ab4.sh.in  abnativeelf.cpp  abnativeelf.hpp  abnativefunctions.cpp  abnativefunctions.h  autobuild.c  bashincludes.h  bashinterface.cpp  bashinterface.hpp  build_spiral_lut.py  build_spiral_lut.sh  common.hpp  config.h.in  logger.cpp  logger.hpp  pm.cpp  stdwrapper.hpp  threadpool.hpp
.github/workflows/: ci.yml
arch/: _common.sh  _common_switches.sh  alpha.sh  amd64.sh  amd64_avx+.sh  amd64_avx2+.sh  arm64.sh  armv4.sh  armv6hf.sh  armv7hf.sh  i386.sh  i486.sh  ia64.sh  loongarch64.sh  loongarch64_nosimd.sh  loongson2f.sh  loongson3.sh  mips32r6el.sh  mips64r6el.sh  noarch.sh  optenv32.sh  powerpc.sh  ppc64.sh  ppc64el.sh  riscv64.sh  sparc64.sh
cmake/: GenerateConfig.cmake  GeneratePrefixFile.cmake
contrib/: CMakeLists.txt  abpoutil
data/: lut_sonames  lut_sonames.cpp.inc  lut_sonames.csv
etc/autobuild/: ab3_defcfg.sh  prefix
filters/: 10-perl.sh  20-retro_drop_docs.sh  40-info_dir.sh  50-infocompress.sh  60-mancompress.sh  70-lib_archives.sh  80-elf.sh  81-pdb.sh  elf.sh  infocompress.sh  mancompress.sh  optenv32_drop_shared_files.sh  retro_drop_docs.sh
helpers/: pep517-helper.py
lib/: builtin.sh  default-defines.sh  default-flags.sh  default-paths.sh  default.sh  scriptlets.sh
native/: CMakeLists.txt  abjsondata.cpp  abjsondata.hpp  abnativeelf.cpp  abnativeelf.hpp  abnativefunctions.cpp  abnativefunctions.h  abserialize.cpp  abserialize.hpp  abspiral.cpp  abspiral.hpp  abspiral_data.cpp  autobuild.c  bashincludes.h  bashinterface.cpp  bashinterface.hpp  common.hpp  logger.cpp  logger.hpp  pm.cpp  pm.hpp  polyfill_execute_cmd.h  threadpool.hpp
pm/: dpkg.sh
proc/: 00-python-defines.sh  01-core-defines.sh  10-env-setup.sh  10-qa-pre-build.sh  11-cleanup.sh  11-pm-deps.sh  11-preproc.sh  12-arch-compiler.sh  12-arch-flags.sh  12-parallel.sh  20-build-funcs.sh  20-build_funcs.sh  20-register-funcs.sh  30-build-probe.sh  40-patch.sh  50-build-exec.sh  50-build_exec.sh  51-build-hwcaps.sh  51-filters.sh  52-overrides.sh  53-spiral.sh  60-licenses.sh  61-conffiles.sh  62-gettext.sh  70-scriptlets.sh  75-qa-post-build.sh  80-pm-pack-install.sh  99-pm-archive.sh
qa/post/: hwcaps.sh  lingering_files.sh  path_issues.sh  permissions.sh  zero_byte.sh
qa/pre/: gettext.sh  variables.sh
sets/: arch_groups.json  arch_targets.json  exports.json  section
templates/: 00-self.sh  10-autotools.sh  11-cmakeninja.sh  12-autosetup.sh  12-cmake.sh  12-meson.sh  12-waf.sh  15-dune.sh  15-gomod.sh  15-pep517.sh  15-perl.sh  15-python.sh  15-rust.sh  16-pep517.sh  16-python.sh  20-qtproj.sh  20-ruby.sh  25-npm.sh  29-plainmake.sh  30-dummy.sh
tests/: CMakeLists.txt  test-ab4-crash-handler.sh  test-ab4-spiral.sh
tests/simple-autotools/: Makefile.am  configure.ac  simple.c
tests/simple-autotools/autobuild/: defines  patch
tests/simple-cmake/: CMakeLists.txt
tests/simple-cmake/autobuild/: defines
tests/simple-dummy/autobuild/: defines
tests/simple-self/autobuild/: build  defines
